--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,18 @@ _/_/_/_/    _/_/_/  _/    _/    _/_/_/    _/_/_/
 /* GENERAL
 /*-----------------------------------------------------------------------------------*/
 
+@font-face{
+	font-family: 'WebFont';
+	src: url('cheddar_jack-webfont.eot');
+	src: url('cheddar_jack-webfont.eot?#iefix') format('embedded-opentype'),
+	     url('cheddar_jack-webfont.woff') format('woff'),
+	     url('cheddar_jack-webfont.ttf') format('truetype'),
+	     url('cheddar_jack-webfont.svg#webfont') format('svg');
+}
+
+.cheddar { font-family: 'WebFont', Arial, sans-serif !Important;
+text-transform: none !important; }
+
 body{
 	text-align: center;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -81,13 +93,13 @@ header h1,
 }
 
 .features p{
-	color: #06b872;
+	color: white;
 }
 
 /*---- Background ----*/
 .features,
 .detail .carousel-indicators .active {
-	background: #0bf397;
+	background: #2d2f31;
 }
 
 
@@ -223,6 +235,14 @@ header .carousel-indicators li {
 }
 
 .purchase button.app-store{
+	width: 145px;
+	height: 38px;
+	background: url(../img/badge-appstore.png) #000000 no-repeat 0px -1px;
+	color: white;
+	margin-top: 10px;
+}
+
+.purchase button.play-store{
 	width: 152px;
 	height: 60px;
 	background: url(../img/google-play-badge.png) #fdfcfc no-repeat 0px 5px;
@@ -292,7 +312,7 @@ header .carousel-indicators li {
 	margin-left: auto;
 	padding-top: 95px;
 	width: 320px;
-	height: 450px;
+	height: 700px;
 	background: url('../img/iphone-front.png') no-repeat;
 	background-size: 100%;
 }
@@ -417,12 +437,22 @@ header .carousel-indicators li {
 	text-align: center;
 }
 
-.get-it button.app-store{
+.get-it button.play-store{
 	width: 152px;
 	height: 60px;
 	background: url(../img/google-play-badge.png) #ffffff no-repeat 0px 5px;
 	color: white;
 }
+
+.get-it button.app-store{
+	width: 145px;
+	height: 38px;
+	background: url(../img/badge-appstore.png) #000000 no-repeat 0px -1px;
+	color: white;
+	margin-top: 10px;
+}
+
+
 
 .get-it hr{
 	margin-top: 3em;
@@ -547,11 +577,7 @@ header, .social{
 
 }
 
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-    /* Retina-specific stuff here */
-    .purchasebutton.app-store, .get-it button.app-store{
-        background: url(../img/badge-appstore@2x.png) #3a3a3a no-repeat 0px 5px;
-        background-size: 98%;
-    	color: white;
-    }
+
+.extra-big{
+	    font-size: 10em;
 }
