--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ header .carousel-indicators li {
 }
 
 .detail p{
-	color: #aaa;
+	color: #171616;
 }
 
 .detail .carousel-control{
@@ -580,4 +580,10 @@ header, .social{
 
 .extra-big{
 	    font-size: 10em;
+			font-style: italic;
+}
+
+.nopadding{
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
