--- a/css/style.css
+++ b/css/style.css
@@ -587,3 +587,34 @@ header, .social{
     padding-top: 0px;
     padding-bottom: 0px;
 }
+
+/* Custom, iPhone Retina */
+@media only screen and (min-width : 320px) {
+	.mobile-logo {
+	    width: 10em;
+	}
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (min-width : 480px) {
+	.mobile-logo {
+	    width: 10em;
+	}
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+	.mobile-logo {
+	    width: 10em;
+	}
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
+
+}
